update gui main menu,gui about, gui kdk, gui ml, gui download

--- a/oclp_mod/languages/id_ID.json
+++ b/oclp_mod/languages/id_ID.json
@@ -47,7 +47,7 @@
     "serial_title": "Override Nomor Seri",
     "custom_serial": "Nomor Seri Kustom",
     "custom_board_serial": "Nomor Seri Papan Kustom",
-    "generate_serial": "Hasilkan S/N: {model}",
+    "generate_serial": "Hasilkan S/N:",
     "Booting_firmware":"Firmware booting",
     "ringkasan":"Ringkasan",
     "start_macos":"Mulai macOS",
@@ -122,7 +122,9 @@
     "SelectSimpleHacDMGimage" :"Pilih SimpelHAC Dmg Image",
     "Error":"Error",
     "Version":"Versi",
+    "Success":"Berhasil",
     "kdk_download":"Download KDK",
+    "Please_select_a_KDK_version_to_copy.":"Silakan pilih versi KDK untuk disalin",
     "remove_the_installer_patch":"Hapus tambalan",
     "Start_installing_the_driver_patch":"Memulai pemasangan",
     "Settings":"Pengaturan",
@@ -263,7 +265,12 @@
     "When_enabled,_the_patch_will_not_report_any_information_to_laobamac.":"Ketika diaktifkan, patch tidak akan melaporkan\ninformasi apapun kepada laobamac.",
     "Disable_Beta_Rim":"Nonaktifkan Beta Rim",
     "Statistics":"Statistik",
+    "Qgroup:965625664":"Grup Q: 965625664",
+    "SimpleHac_Resource_Community:www.simplehac.cn":"SimpleHac Sumber Komunitas: www.simplehac.cn",
+    "simplehac_laobamac":"SimpleHac[laobamac] dimodifikasi dan diterjemahkan ke\ndalam bahasa Inggris, china, dan indonesia oleh satria.",
+    "This_is_an_OCLP_mod_for_a_high_school_student_who_likes_to_coo.":"Ini adalah OCLP dari seorang siswa SMA\nyang suka menggerutu.",
     "Allow_native_models":"Izinkan model asli",
+    "OCLP-Mod_By_laobamac_translated_by_satria_ramadan":"OCLP-Mod By laobamac di terjemahkan oleh satria ramadan",
     "WhenenabledtheapplicationwillremoveunusedKDKsfromthesystemduringrootdirectorypatching":"Saat diaktifkan, aplikasi akan menghapus KDK\nyang tidak digunakan dari sistem selama\npenambalan direktori root.",
     "attention_this_option_should":"Opsi ini hanya boleh digunakan jika Mac Anda secara native mendukung sistem operasi yang ingin Anda jalankan. Jika Anda saat ini menjalankan sistem operasi yang tidak didukung, opsi ini akan mengakibatkan kegagalan boot. Beralih ke Mac native hanya untuk mengaktifkan fitur sistem operasi. Apakah Anda yakin ingin melanjutkan?",
     "Allows_the_installation_of_OpenCore":"Memungkinkan instalasi OpenCore pada Mac yang\ndidukung secara natively. Perlu dicatat bahwa ini\ntidak akan memungkinkan versi macOS yang\ntidak didukung untuk diinstal di sistem Anda.",
@@ -275,5 +282,59 @@
     "Solution_to_load_the_cursor_(rainbow_circle)":"Solusi memuat kursor (lingkaran pelangi)",
     "If_the_Beta_menu_bar_is_activated,the_menu_bar_color_will_be_dynamic_as_needed":"Jika bilah menu Beta diaktifkan, warna bilah\nmenu akan dinamis sesuai dengan perubahan\nyang diperlukan.",
     "Logout_is_required_to_apply_changes_to_SkyLight":"Logout diperlukan untuk menerapkan perubahan pada SkyLight",
+    "Downloading:":"Sedang mengunduh:",
+    "Ready_to_download":"Siap untuk diunduh",
+    "There_is_still":"Masih ada",
+    "center":"Tengah",
+    "speed":"Kecepatan",
+    "Download_failed":"Download gagal",
+    "Cancel_download":"Batalkan unduhan",
+    "at":"di",
+    "The_download_will_be_canceled,are_you_sure?":"unduhan akan dibatalkan, apakah kamu yakin?",
+    "Downloaded":"Telah diunduh",
+    "OCLP_resources":"Sumber OCLP",
+    "Available_resources:":"Sumber tersedia",
+    "Official_Guide":"Panduan Resmi",
+    "Guide":"Petunjuk",
+    "Save_the_file":"Simpan file",
+    "Official_support":"Dukungan resmi",
+    "language_support":"dukungan bahasa",
+    "Official_Discord_community":"Komunitas discord resmi",
+    "SimpleHac_Resource_Community":"Sumber SimpleHac",
+    "No_patches_needed!Do_you_want_to_reboot_now_to_install_OpenCore?":"Tidak ada patch yang diperlukan! Apakah Anda ingin reboot sekarang untuk menginstal OpenCore?",
+    "Downloading_KDK":"Sedang Mengunduh KDK",
+    "Retrieve_the_KDK_database":"Ambil kembali database KDK...",
+    "KDK_download_failed:":"Unduhan KDK Gagal",
+    "KDK_MD5_mismatch:":"KDK MD5 tidak cocok:",
+    "Download_progress":"Proses Download",
+    "Failed_to_retrieve_KDK_information:":"Gagal mendapatkan informasi KDK:",
+    "Downloading_Metal_Libraries":"Sedang Mengunduh Metal Libraries",
+    "Metallib_download_failed":"Unduhan metallib gagal",
+    "Installing_Metallib:":"Memasang Metallib:",
+    "Metallib_installation_failed:":"Pemasangan Metallib gagal:",
+    "Retrieve_MetallibSupportPkg_database...":"Mengambil data dari database MetallibSupportPkg...",
+    "we_have_just_completed":"Kami baru saja menyelesaikan pemasangan patch ke kernel!Namun, Apple mengharuskan pengguna untuk secara manual menyetujui ekstensi kernel yang telah diinstal sebelum dapat menggunakannya pada reboot berikutnya.Apakah Anda ingin membuka preferensi sistem?",
+    "Open_System_Preferences?":"Buka Preferensi Sistem?",
+    "Open_system_settings":"Buka pengaturan sistem",
+    "Ignore":"Abaikan",
+    "System":"Sistem",
+    "Date":"Tanggal",
+    "Versions":"Versi",
+    "About":"Tentang",
+    "Retrieving_MetalLib_information...":"Sedang mendapatkan informasi MetalLib...",
+    "Loading":"Sedang memuat",
+    "Download_link":"Link unduh",
+    "MetalLib_download":"Unduh MetalLib",
+    "Please_select_a_MetalLib_version_to_download.":"Silakan pilih versi MetalLib untuk diunduh",
+    "Please_select_a_version_of_MetaLib_to_copy.":"Silakan pilih versi MetaLib untuk disalin",
+    "Failed_to_retrieve_MetalLib_information:":"Gagal mendapatkan informasi MetalLib:",
+    "Failed_to_apply_any_patches.":"Tidak dapat menerapkan patch apapun",
+    "Restore_to_the_most_recent_snapshot":"Pulihkan ke snapshot terbaru",
+    "Installing_driver_patch":"Memasang driver patch",
+    "Uninstalling_driver_patch":"Sedang mencopot driver patch",
+    "The_following_patches_will_be_installed:":"Akan menginstal patch berikut:",
+    "Please_select_a_KDK_version_to_download.":"Tolong pilih versi KDK untuk di unduh",
+    "The_driver_patch_operation_was_successful!Restart_now?":"Operasi patch driver berhasil!Apakah sekarang mau restart?",
+    "the_driver_patch_was_succesfully":"Operasi patch penggerak berhasil!Jika sistem meminta Anda untuk membuka 'Pengaturan Sistem' untuk memberikan izin kepada Kext baru, Anda dapat mengabaikan ini. Setelah di-restart, sistem Anda sudah siap.Apakah Anda ingin me-restart sekarang?",
     "advanced":"Lanjutan"
 }
