--- a/oclp_mod/languages/zh_CN.json
+++ b/oclp_mod/languages/zh_CN.json
@@ -46,7 +46,7 @@
     "serial_title": "序列号覆写",
     "custom_serial": "自定义序列号",
     "custom_board_serial": "自定义主板序列号",
-    "generate_serial": "生成 S/N: {model}",
+    "generate_serial": "生成 S/N:",
     "Booting_firmware": "启动固件",
     "ringkasan": "摘要",
     "start_macos": "开始 macOS",
@@ -110,6 +110,7 @@
     "SelectSimpleHacDMGimage" :"选择SimpleHac DMG镜像",
     "ChoosethisimagesupportedbySimpleHac":"选择此镜像 由SimpleHac提供支持",
     "Download":"下载",
+    "Download_progress":"下载进度",
     "Copy_link":"复制链接",
     "Choose_this_macOS":"选择此macOS",
     "Download_the_selected_macOS":"下载选定的macOS",
@@ -274,5 +275,65 @@
     "Solution_to_load_the_cursor_(rainbow_circle)":"解决方案加载光标（彩虹圆圈)",
     "If_the_Beta_menu_bar_is_activated,the_menu_bar_color_will_be_dynamic_as_needed":"如果启用了Beta菜单栏,\n菜单栏的颜色将根据需要动态变化。",
     "Logout_is_required_to_apply_changes_to_SkyLight":"退出需要应用于SkyLight的更改",
+    "Downloading:":"正在下载:",
+    "Ready_to_download":"准备下载",
+    "There_is_still":"还有",
+    "center":"中",
+    "speed":"速度",
+    "Download_failed":"下载失败",
+    "at":"在",
+    "Cancel_download":"取消下载",
+    "Qgroup:965625664":"Q群：965625664",
+    "SimpleHac_Resource_Community:www.simplehac.cn":"SimpleHac资源社：www.simplehac.cn",
+    "The_download_will_be_canceled,are_you_sure?":"下载将被取消，你确定吗？",
+    "simplehac_laobamac":"SimpleHac[laobamac] 已被修改并翻译成英语\n中文和印度尼西亚语，由 satria 进行。",
+    "Downloaded":"已下载",
+    "OCLP_resources":"OCLP资源",
+    "This_is_an_OCLP_mod_for_a_high_school_student_who_likes_to_coo.":"T这是一个喜欢咕咕的高中生Mod的OCLP",
+    "OCLP-Mod_By_laobamac_translated_by_satria_ramadan":"OCLP-Mod由laobamac制作，由satria ramadan翻译",
+    "Available_resources:":"可用资源:",
+    "Official_Guide":"官方指南",
+    "Official_support":"官方支持",
+    "language_support":"语言支持",
+    "Official_Discord_community":"官方Discord社区",
+    "SimpleHac_Resource_Community":"SimpleHac资源社",
+    "No_patches_needed!Do_you_want_to_reboot_now_to_install_OpenCore?":"不需要任何补丁!\n\n你想现在重启来安装OpenCore吗？",
+    "Downloading_KDK":"正在下载KDK",
+    "Retrieve_the_KDK_database":"取回KDK数据库...",
+    "KDK_download_failed:":"KDK 下载失败:",
+    "KDK_MD5_mismatch:":"KDK MD5不匹配:",
+    "Loading":"正在加载",
+    "Downloading_Metal_Libraries":"正在下载 Metal Libraries",
+    "Retrieve_MetallibSupportPkg_database...":"取回 MetallibSupportPkg 数据库...",
+    "we_have_just_completed":"我们刚刚完成了到根卷的补丁安装！\n\n但是，Apple 要求用户手动批准已安装的内核扩展，然后才能在下次重新启动之前使用它们。\n\n您要打开系统偏好设置吗？",
+    "Open_System_Preferences?":"打开系统偏好设置吗？",
+    "Open_system_settings":"打开系统设置",
+    "Ignore":"忽略",
+    "Failed_to_retrieve_KDK_information:":"F获取KDK信息失败:",
+    "Metallib_installation_failed:":"Metallib 安装失败:",
+    "Metallib_download_failed":"Metallib 下载失败",
+    "Installing_Metallib:":"正在安装Metallib:",
+    "Failed_to_apply_any_patches.":"未能应用任何补丁",
+    "The_following_patches_will_be_installed:":"将会安装以下补丁:",
+    "Restore_to_the_most_recent_snapshot":"恢复到最近快照",
+    "Installing_driver_patch":"安装驱动程序补丁",
+    "Uninstalling_driver_patch":"正在卸载驱动补丁",
+    "Success":"成功",
+    "Guide":"提示",
+    "About":"关于",
+    "Please_select_a_MetalLib_version_to_download.":"请选择一个MetalLib版本进行下载",
+    "Date":"日期",
+    "Versions":"版本",
+    "Please_select_a_version_of_MetaLib_to_copy.":"请选择一个MetaLib版本进行复制",
+    "Failed_to_retrieve_MetalLib_information:":"获取MetalLib信息失败:",
+    "MetalLib_download":"MetalLib下载",
+    "Retrieving_MetalLib_information...":"正在获取MetalLib信息...",
+    "System":"系统",
+    "Save_the_file":"保存文件",
+    "Download_link":"下载链接",
+    "Please_select_a_KDK_version_to_download.":"请选择一个KDK版本进行下载",
+    "Please_select_a_KDK_version_to_copy.":"请选择一个KDK版本进行复制",
+    "The_driver_patch_operation_was_successful!Restart_now?":"驱动补丁操作成功!\n\n现在重启吗?",
+    "the_driver_patch_was_succesfully":"驱动补丁操作成功!\n如果系统提示您打开“系统设置”以授权新的 Kext，可以忽略此项。重新启动后，您的系统已准备就绪.\n\n现在重启吗?",
     "advanced":"高级"
 }  
