--- a/oclp_mod/languages/en_US.json
+++ b/oclp_mod/languages/en_US.json
@@ -46,7 +46,7 @@
     "serial_title": "Serial Number Override",
     "custom_serial": "Custom Serial Number",
     "custom_board_serial": "Custom Board Serial Number",
-    "generate_serial": "Generate S/N: {model}",
+    "generate_serial": "Generate S/N:",
     "Booting_firmware":"Booting Firmware",
     "ringkasan":"Summary",
     "start_macos":"Start macOS",
@@ -274,5 +274,66 @@
     "Solution_to_load_the_cursor_(rainbow_circle)":"Solution to load the cursor (rainbow circle)",
     "If_the_Beta_menu_bar_is_activated,the_menu_bar_color_will_be_dynamic_as_needed":"If the Beta menu bar is activated, the menu bar\ncolor will be dynamic as needed change.",
     "Logout_is_required_to_apply_changes_to_SkyLight":"Logout is required to apply changes to SkyLight.",
+    "Downloading:":"Downloading:",
+    "Ready_to_download":"Ready to download",
+    "There_is_still":"There is still",
+    "center":"Center",
+    "Failed_to_retrieve_KDK_information:":"Failed to retrieve KDK information:",
+    "speed":"Speed",
+    "Loading":"Loading",
+    "Download_failed":"Download failed",
+    "Cancel_download":"Cancel download",
+    "at":"at",
+    "The_download_will_be_canceled,are_you_sure?":"The download will be canceled, are you sure?",
+    "Downloaded":"Downloaded",
+    "OCLP_resources":"OCLP resources",
+    "Available_resources:":"Available resources:",
+    "Official_Guide":"Official Guide",
+    "Official_support":"Official support",
+    "Official_Discord_community":"Official Discord community",
+    "language_support":"Language support",
+    "SimpleHac_Resource_Community":"SimpleHac Resource Community",
+    "No_patches_needed!Do_you_want_to_reboot_now_to_install_OpenCore?":"No patches needed!Do you want to reboot now to install OpenCore?",
+    "Downloading_KDK":"Downloading KDK",
+    "Metallib_download_failed":"Metallib download failed",
+    "Retrieve_the_KDK_database":"Retrieve the KDK database...",
+    "KDK_download_failed:":"KDK download failed:",
+    "Installing_Metallib:":"Installing Metallib:",
+    "Metallib_installation_failed:":"Metallib installation failed:",
+    "KDK_MD5_mismatch:":"KDK MD5 mismatch:",
+    "Downloading_Metal_Libraries":"Downloading Metal Libraries",
+    "Retrieve_MetallibSupportPkg_database...":"Retrieve MetallibSupportPkg database...",
+    "we_have_just_completed":"We have just completed the patch installation to the root volume!However, Apple requires users to manually approve the installed kernel extensions before they can be used the next time they restart.Do you want to open System Preferences?",
+    "Open_System_Preferences?":"Open System Preferences?",
+    "Open_system_settings":"Open system settings",
+    "Ignore":"Ignore",
+    "The_following_patches_will_be_installed:":"The following patches will be installed:",
+    "Failed_to_apply_any_patches.":"Failed to apply any patches.",
+    "Restore_to_the_most_recent_snapshot":"Restore to the most recent snapshot",
+    "Installing_driver_patch":"Installing driver patch",
+    "Uninstalling_driver_patch":"Uninstalling driver patch",
+    "Success":"Success",
+    "Guide":"Guide",
+    "System":"System",
+    "Qgroup:965625664":"Q Grup: 965625664",
+    "simplehac_laobamac":"SimpleHac[laobamac] modified and translated into\nEnglish, Chinese, and Indonesian by Satria.",
+    "SimpleHac_Resource_Community:www.simplehac.cn":"SimpleHac Resource Community: www.simplehac.cn",
+    "About":"About",
+    "This_is_an_OCLP_mod_for_a_high_school_student_who_likes_to_coo.":"This is an OCLP mod for a high school\nstudent who likes to coo.",
+    "OCLP-Mod_By_laobamac_translated_by_satria_ramadan":"OCLP-Mod By laobamac translated by satria ramadan",
+    "Date":"Date",
+    "Versions":"Versions",
+    "Please_select_a_MetalLib_version_to_download.":"Please select a MetalLib version to download.",
+    "Please_select_a_version_of_MetaLib_to_copy.":"Please select a version of MetaLib to copy.",
+    "Failed_to_retrieve_MetalLib_information:":"Failed to retrieve MetalLib information:",
+    "MetalLib_download":"MetalLib download",
+    "Download_link":"Download link",
+    "Save_the_file":"Save the file",
+    "Retrieving_MetalLib_information...":"Retrieving MetalLib information...",
+    "Download_progress":"Download progress",
+    "Please_select_a_KDK_version_to_download.":"Please select a KDK version to download.",
+    "Please_select_a_KDK_version_to_copy.":"Please select a KDK version to copy.",
+    "The_driver_patch_operation_was_successful!Restart_now?":"The driver patch operation was successful!Restart now?",
+    "the_driver_patch_was_succesfully":"The driver patch operation was successful! If the system prompts you to open 'System Preferences' to authorize new Kexts, you can ignore this. After restarting, your system will be ready.Would you like to restart now?",
     "advanced":"Advanced"
 }
