--- a/oclp_mod/languages/es_ES.json
+++ b/oclp_mod/languages/es_ES.json
@@ -1,1 +1,171 @@
 
+{
+    "app_title": "Open Core Legacy Patcher MOD v{version}",
+    "build_and_install": "Compilar e Instalar OpenCore",
+    "build_description": [
+        "Proporciona información adicional",
+        "Arrancar una versión más nueva del sistema\nrequiere .app u otro instalador"
+    ],
+    "create_installer": "Crear macOS Installer",
+    "installer_description": [
+        "Descargar macOS installer",
+        "Instalar nuevo macOS usando ."
+    ],
+    "settings": "⚙️ Ajustes",
+    "post_install": "Instalar parches de hardware",
+    "patch_description": [
+        "Instalar parches de controladores",
+        "(Después de instalar nueva versión de macOS,",
+        "entra en el sistema y hazlo entonces)"
+    ],
+    "help": "Obtener soporte",
+    "help_description": [
+        "Recursos Relacionados con OCLP",
+        "Traducido por Emilio P Egido"
+    ],
+    "download_kdk": "Descargar KDK",
+    "change_language": "🇪🇸 Cambiar idioma",
+    "download_ml": "Descargar MetalLib",
+    "model_text": "Modelo: {model}, modificado por laobamac & satria ramadan",
+    "unsupported_config": "Vemos que estás arrancando OpenCore para: {model}\n\n Generamos configuración para coincidir con unidades individuales y no pueden usarse con diferentes Mac.\n\nPor favor genera e instala una nueva configuración de OpenCore y entonces reinicia tu Mac.",
+    "language_change_title": "Cambiar Idioma",
+    "language_change_prompt": "Elegir idioma",
+    "language_change_success": "Se ha cambiado el idioma. Reinicia la aplicación para ver los cambios.",
+    "update_title": "¡Actualización de OCLP-Mod Disponible!",
+    "update_message": "OCLP-Mod {new_version} está disponible\Actualmente estás ejecutando {current_version}\¿Quieres actualizar ahora?",
+    "update_view_github": "Ver en GitHub",
+    "update_download": "Descargar e instalar",
+    "update_ignore": "Ignorar",
+    "update_changelog_fail": "## Fallo al obtener el registro de cambios\n\Por favor comprueba la página RELEASE en GitHub",
+    "target_model": "Modelo final",
+    "model_description": "Al sobrescribir el modelo, el parcheador emulará",
+    "back": "Atrás",
+    "membuat":"Creado",
+    "host_model": "Modelo anfitrión",
+    "sip_title": "System Integrity Protection (SIP)",
+    "sip_label": "Intercambiar bits individuales correspondientes a",
+    "serial_title": "Sobrescribir Número de Serie",
+    "custom_serial": "Número de Serie personalizado",
+    "custom_board_serial": "Número de Serie de placa base personalizado",
+    "generate_serial": "Generar S/N: {model}",
+    "Booting_firmware":"Arrancando Firmware",
+    "ringkasan":"Resumen",
+    "start_macos":"Arrancar macOS",
+    "start_XHCI":"Arrancando XHCI",
+    "usb_expansion":"Tarjeta de expansión USB 3.0 para arrancar macOS.",
+    "booting_nvme":"Arrancando NVWME",
+    "support":"Soporte",
+    "Boot_interface_wait_time":"Tiempo de espera de la interfaz de arranque",
+    "when_deactive":"Si se desactiva, los usuarios pueden pulsarla la tecla ESC\nMuestra selector en el firmware.",
+    "Displaying_the_OpenCore_boot_interface":"Mostrando interfaz de arranque de OC",
+    "description_digitaly_signin":"Firmar OpenCore digitalmente para evitar Daño\nDestrucción",
+    "Non-original_NVMe_drive":"Disco NVMe no original",
+    "Protection_of_OpenCore_Digital_Signature" :"Protección de la Firma Digital de OC",
+    "OC_can_be_booted_from_the_NVMe_drive.":"OC puede arrancar desde el disco NVMe.",
+    "Note:_Your_machine_must_support_NVMe.":"Nota: Tu máquina ha de soportar NVMe.",
+    "In_a_system_without_native_support_activate":"Activar en sistemas sin soporte nativo",
+    "On_the_boot_selector,_choose_default.":"Elige opción por defecto en el selector de arranque.",
+    "Time_runs_out_a_second_before_entering.":"El tiempo termina un segundo antes de entrar.",
+    "Setting_this_to_0_means_there_is_no_deadline.":"Si se establece en 0, significa que no hay tiempo límite.",
+    "MacPro3.1/Xserve2.1Solutions":"Solución para MacPro3.1/Xserve2.1",
+    "Limitthemaximumnumberofthreadsonthisunitto4.":"Limitar el número máximo de hilos en esta\nunidad a 4.",
+    "RequiredformacOSSequoiaandnewerversions.":"Requerido para macOS Sequoia y versiones posteriores.",
+    "Debugging":"Depurando",
+    "verbose_mode":"Modo detallado",
+    "debug_version_driver":"Depurar versión del controlador",
+    "Additional":"Adicional",
+    "Universal(effectivesustainability)":"Universal (sostenibilidad efectiva)",
+    "debugging_OpenCore_version":"depurando la versión de OpenCore",
+    "Use_the_DEBUG_version":"Usa la versión DEBUG de OpenCore,\ny habilita adicional kernel logging.",
+    "use_debug":"Usa la versión DEBUG de la kext, y habilita adicional kernel logging.",
+    "Outputverboseinformationupon_startup":"Muestra información detallada en el arranque",
+    "Target_model":"Modelo final",
+    "Host_model":"Modelo anfitrión",
+    "Applicable_only_to_BCM943224,_331,":"Aplicable solamente a BCM943224, 331,",
+    "360and3602chipsets.":"chipsets 360 y 3602.",
+    "Disable_Thunder":"Desactiva Thunder",
+    "Disable_CPUFriend":"Desactiva CPUFriend",
+    "Photos,this_may_delay.":"Fotos, puede tardar.",
+    "CPU_usage":"Uso de CPU",
+    "SATA_power_management":"Gestión de Energía de SATA",
+    "NVMepowermanagement":"Gestión de Energía de NVME",
+    "Third-partySATApowermanagement":"Gestión de Energía de 3P SATA",
+    "RegardingiCloudusing3802-BasedGPUs":"Respecto a iCloud usando GPU basadas en 3802",
+    "Disablethemediaanalysisdservice":"Desactiva el servicio mediaanalysisd",
+    "DisableCPUFriendforunsupportedmodels.":"Desactiva CPUFriend para modelos no soportados.",
+    "Regarding_the_malfunction":"Respecto a mal funcionamiento",
+    "Allow_exposing_iGPU_in_Windows":"Permite exponer la iGPU en Windows",
+    "UsedfordGPU-basedMacBooks":"Usado para MacBook basados en dGPU",
+    "DisabledondowngradedNVRAMsystem.":"Desactivar en sistemas con NVRAM degradada.",
+    "PCHmayoccasionallycrashonMacBookPro11,x.":"PCH puede fallar ocasionalmente en\nMacBook Pro 11,x.",
+    "Causes_performance_degradation":"Provoca degradación del rendimiento",
+    "Allow_the_use_of_AppleALC_audio":"Permite el uso de AppleALC audio",
+    "WritetoNVRAM":"Escribir en NVRAM",
+    "Trim_related":"Relacionado con Trim",
+    "DownloadthemacOSinstaller(.app)":"Descargar macOS installer (.app)",
+    "Selectthelocalinstaller(.app)":"Elegir el instalador local (.app)",
+    "Downloadthethree-partitionimage(.dmg)":"Descargar la imagen con 3 particiones (.dmg)",
+    "BurnDMGimage(.dmg)":"Grabar imagen DMG (.dmg)",
+    "SSDsmayalsobenefitfromdisablingthisfeature.":"SSDs también pueden beneficiarse de esta \ncaracterística.",
+    "Itisrecommendedthatallusersuseit,evenifthereareissues.":"Recomendable para todos los usuarios, incluso si\nhay problemas.",
+    "Third-partyNVMepowermanagement":"Gestión de Energía de 3P NVMe",
+    "EnableunprovidedfeaturesinmacOS":"Habilita características no nativas en macOS",
+    "AllowOpenCoretowritetoNVRAM.":"Permite a OpenCore escribir en NVRAM.",
+    "Incaseoramalfunctionor":"En caso de mal funcionamiento o",
+    "CreateamacOSinstaller":"Crear instalador de macOS",
+    "FindalocalmacOSinstaller":"Buscar instalador de macOS local",
+    "SelectSimpleHacDMGimage" :"Elegir imagen SimpleHac DMG",
+    "Download":"Descargar",
+    "The_macOS_installer_has_been_successfully_created!":"¿El instalador de macOS se ha creado con éxito!",
+    "DownloadtheselectedDMG":"Descargar la imagen DMG seleccionada",
+    "Copy_link":"Copiar enlace",
+    "Download_the_image_from_SimpleHac_OSS":"Descarga la imagen desde SimpleHac OSS",
+    "Download_the_selected_macOS":"Descargar el macOS seleccionado",
+    "Choose_this_macOS":"Elige este macOS",
+    "Show_old_version/test_version":"Mostrar versión antigua/probar versión",
+    "Choose_the_macOS_installer":"Elegir instalador de macOS",
+    "Copy_the_download_link_of_the_selected_DMG.":"Copiar enlace de descarga de la imagen DMG seleccionada.",
+    "ChoosethisimagesupportedbySimpleHac":"Elige esta imagen soportada por SimpleHac",
+    "LookingfordownloadableDMGimages":"Buscando la Descarga",
+    "Searchingforavailabledownloadableversions.":"Buscando",
+    "Copied_to_clipboard":"Copiado al portapapeles",
+    "Error":"Error",
+    "No_patch_needed":"No requiere parches",
+    "unable_to_install_patch":"Incapaz de aplicar el parche, motivo: ",
+    "All_patches_have_been_installed.":"Se han instalado todos los parches.",
+    "Install_driver_patch" :"Instalar parche de controlador",
+    "Scan_again":"Comprobar de nuevo",
+    "No_available_hard_disk_found.":"No se encuentra disco duro disponible.",
+    "The_selected_USB_drive_will_be_formatted!":"¿Se formateará la unidad USB seleccionada!",
+    "Select_local_hard_drive":"Seleccionar disco duro local",
+    "Retrieve_local_hard_drive_information":"Obtener información del disco duro local",
+    "it_seems":"Parece que no hay ningún instalador en la carpeta de aplicaciones.",
+    "Select_the_local_macOS_installer":"Seleccionar el instalador local de macOS",
+    "due_to":"Debido a la carga de trabajo, esta parte no está terminada (gui_simplehac_dmg_flash.py es un producto incompleto). ¡Descarga Etcher para grabarla tú mismo! Abre la imagen acelerada de SimpleHac para descargar Etcher.",
+    "Selected_the_directory":"Selecciona directorio",
+    "Select_save_directory":"Selecciona directorio para guardar",
+    "written":"Escrito: 0.00 MB",
+    "Version":"Versión",
+    "kdk_download":"Descarga KDK",
+    "Retrieving_KDK_information...":"Obteniendo información del KDK...",
+    "remove_the_installer_patch":"Quitar parches instalados",
+    "Start_installing_the_driver_patch":"Iniciar la instalación del parche del controlador",
+    "last_patch_installation_time":"Tiempo de instalación del último parche:",
+    "Installable_patches":"Parches instalables",
+    "Settings":"Ajustes",
+    "Verification":"Verificación",
+    "matching_available_patch":"Parches válidos para la instalación",
+    "verifying_the_installer":"Verificando instalador...",
+    "Theinstallerwascreatedsuccessfully.DoyouwanttocontinueandinstallOpenCoreon_this_disk?":"El instalador se ha creado con éxito. ¿Quieres continuar e instalar OpenCore en este disco?",
+    "this_installer_has_been_created":"¡El instalador se ha creado con éxito!. Si quieres instalar OpenCore en este USB, necesitas cambiar el modelo final en los ajustes.",
+    "the_macos_installer-has_been_succesfully":"¡El instalador se ha creado con éxito!",
+    "devending":"Dependiendo de la velocidad del dispositivo, puede tardar 30 minutos o incluso más.",
+    "you_can_go_to_other_things":"Puedes hacer otras cosas, como inspeccionar la comunidad de recursos de SimpleHac, y se te avisará cuando termine.",
+    "Failed_to_obtain_DMG_information,please_contact_laobamac.":"Fallo al obtener información de la imagen DMG, por favor contacta con laobamac.",
+    "Unable_to_find_the_download_link.":"Incapaz de encontrar el enlace de descarga.",
+    "AllowAppleALCtomanageaudioifapplicable.":"Permite que AppleALC maneje el sonido si corresponde.",
+    "DisabledonlywhenthehostlackstheGOPROM.":"Desactivar solamente cuando el anfitrión carece de \nGOP ROM.",
+    "Themodelthatthepatcherisgoingtoimitate.":"Modelo que se va a imitar.",
+    "Disabled_by_default":"Desactivado por defecto, ya que puede suceder desde el\nestado de reposo en algunos sistemas.",
+    "enable_fireware_driver":"Habilitar Controlador FireWirer"
+}
