--- a/oclp_mod/languages/es_ES.json
+++ b/oclp_mod/languages/es_ES.json
@@ -1,46 +1,45 @@
-
 {
     "app_title": "Open Core Legacy Patcher MOD v{version}",
-    "build_and_install": "Compilar e Instalar OpenCore",
+    "build_and_install": "Compilar e Instalar OC",
     "build_description": [
-        "Proporciona información adicional",
-        "Arrancar una versión más nueva del sistema\nrequiere .app u otro instalador"
+        "Información adicional.",
+        "Una versión más nueva de macOS\nrequiere .app u otro instalador."
     ],
     "create_installer": "Crear macOS Installer",
     "installer_description": [
-        "Descargar macOS installer",
+        "Descargar instalador de macOS.",
         "Instalar nuevo macOS usando ."
     ],
     "settings": "⚙️ Ajustes",
-    "post_install": "Instalar parches de hardware",
+    "post_install": "Instalar parches",
     "patch_description": [
-        "Instalar parches de controladores",
-        "(Después de instalar nueva versión de macOS,",
-        "entra en el sistema y hazlo entonces)"
+        "Instalar parches de controladores.",
+        "(Hazlo después de instalar una versión",
+        "nueva de macOS)."
     ],
     "help": "Obtener soporte",
     "help_description": [
-        "Recursos Relacionados con OCLP",
-        "Traducido por Emilio P Egido"
+        "Recursos para OCLP.",
+        "Traducido por perez987."
     ],
     "download_kdk": "Descargar KDK",
     "change_language": "🇪🇸 Cambiar idioma",
     "download_ml": "Descargar MetalLib",
-    "model_text": "Modelo: {model}, modificado por laobamac & satria ramadan",
-    "unsupported_config": "Vemos que estás arrancando OpenCore para: {model}\n\n Generamos configuración para coincidir con unidades individuales y no pueden usarse con diferentes Mac.\n\nPor favor genera e instala una nueva configuración de OpenCore y entonces reinicia tu Mac.",
+    "model_text": "Modelo: {model}, modificado por laobamac y satria ramadan",
+    "unsupported_config": "Vemos que estás usando OpenCore para: {model}\n\n Generamos configuración para coincidir con unidades individuales y no pueden usarse con diferentes Mac.\n\nPor favor genera e instala una nueva configuración de OpenCore y entonces reinicia tu Mac.",
     "language_change_title": "Cambiar Idioma",
     "language_change_prompt": "Elegir idioma",
     "language_change_success": "Se ha cambiado el idioma. Reinicia la aplicación para ver los cambios.",
     "update_title": "¡Actualización de OCLP-Mod Disponible!",
-    "update_message": "OCLP-Mod {new_version} está disponible\Actualmente estás ejecutando {current_version}\¿Quieres actualizar ahora?",
+    "update_message": "OCLP-Mod {new_version} está disponible\nActualmente estás ejecutando {current_version}\n¿Quieres actualizar ahora?",
     "update_view_github": "Ver en GitHub",
     "update_download": "Descargar e instalar",
     "update_ignore": "Ignorar",
-    "update_changelog_fail": "## Fallo al obtener el registro de cambios\n\Por favor comprueba la página RELEASE en GitHub",
+    "update_changelog_fail": "## Fallo al obtener el registro de cambios\n\nPor favor comprueba la página RELEASE en GitHub",
     "target_model": "Modelo final",
     "model_description": "Al sobrescribir el modelo, el parcheador emulará",
     "back": "Atrás",
-    "membuat":"Creado",
+    "membuat":"Compilar",
     "host_model": "Modelo anfitrión",
     "sip_title": "System Integrity Protection (SIP)",
     "sip_label": "Intercambiar bits individuales correspondientes a",
@@ -48,70 +47,70 @@
     "custom_serial": "Número de Serie personalizado",
     "custom_board_serial": "Número de Serie de placa base personalizado",
     "generate_serial": "Generar S/N: {model}",
-    "Booting_firmware":"Arrancando Firmware",
+    "Booting_firmware":"Firmware",
     "ringkasan":"Resumen",
-    "start_macos":"Arrancar macOS",
-    "start_XHCI":"Arrancando XHCI",
-    "usb_expansion":"Tarjeta de expansión USB 3.0 para arrancar macOS.",
-    "booting_nvme":"Arrancando NVWME",
-    "support":"Soporte",
-    "Boot_interface_wait_time":"Tiempo de espera de la interfaz de arranque",
-    "when_deactive":"Si se desactiva, los usuarios pueden pulsarla la tecla ESC\nMuestra selector en el firmware.",
-    "Displaying_the_OpenCore_boot_interface":"Mostrando interfaz de arranque de OC",
-    "description_digitaly_signin":"Firmar OpenCore digitalmente para evitar Daño\nDestrucción",
-    "Non-original_NVMe_drive":"Disco NVMe no original",
-    "Protection_of_OpenCore_Digital_Signature" :"Protección de la Firma Digital de OC",
-    "OC_can_be_booted_from_the_NVMe_drive.":"OC puede arrancar desde el disco NVMe.",
+    "start_macos":"Iniciar macOS.",
+    "start_XHCI":"Iniciar XHCI",
+    "usb_expansion":"Tarjeta de expansión USB3 de arranque.",
+    "booting_nvme":"Iniciar NVWME",
+    "support":"Soporte.",
+    "Boot_interface_wait_time":"Tiempo de espera en el selector",
+    "when_deactive":"Si se desactiva, pulsa la tecla ESC.\nMuestra selector en el firmware.",
+    "Displaying_the_OpenCore_boot_interface":"Mostrar selector de OC",
+    "description_digitaly_signin":"Firmar OpenCore digitalmente para evitar \ndaños maliciosos",
+    "Non-original_NVMe_drive":"Disco NVMe no original.",
+    "Protection_of_OpenCore_Digital_Signature" :"Proteger Firma Digital de OC",
+    "OC_can_be_booted_from_the_NVMe_drive.":"OC puede iniciar desde disco NVMe.",
     "Note:_Your_machine_must_support_NVMe.":"Nota: Tu máquina ha de soportar NVMe.",
-    "In_a_system_without_native_support_activate":"Activar en sistemas sin soporte nativo",
-    "On_the_boot_selector,_choose_default.":"Elige opción por defecto en el selector de arranque.",
-    "Time_runs_out_a_second_before_entering.":"El tiempo termina un segundo antes de entrar.",
-    "Setting_this_to_0_means_there_is_no_deadline.":"Si se establece en 0, significa que no hay tiempo límite.",
-    "MacPro3.1/Xserve2.1Solutions":"Solución para MacPro3.1/Xserve2.1",
-    "Limitthemaximumnumberofthreadsonthisunitto4.":"Limitar el número máximo de hilos en esta\nunidad a 4.",
-    "RequiredformacOSSequoiaandnewerversions.":"Requerido para macOS Sequoia y versiones posteriores.",
+    "In_a_system_without_native_support_activate":"Activar en sistemas sin soporte nativo.",
+    "On_the_boot_selector,_choose_default.":"Elige opción por defecto en el selector.",
+    "Time_runs_out_a_second_before_entering.":"Termina un segundo antes de entrar.",
+    "Setting_this_to_0_means_there_is_no_deadline.":"Si se establece en 0, no hay límite.",
+    "MacPro3.1/Xserve2.1Solutions":"MacPro3.1/Xserve2.1",
+    "Limitthemaximumnumberofthreadsonthisunitto4.":"Limitar el número máximo de hilos a 4.",
+    "RequiredformacOSSequoiaandnewerversions.":"Requerido por Sequoia y siguientes.",
     "Debugging":"Depurando",
     "verbose_mode":"Modo detallado",
     "debug_version_driver":"Depurar versión del controlador",
     "Additional":"Adicional",
-    "Universal(effectivesustainability)":"Universal (sostenibilidad efectiva)",
+    "Universal(effectivesustainability)":"Universal (continuación)",
     "debugging_OpenCore_version":"depurando la versión de OpenCore",
-    "Use_the_DEBUG_version":"Usa la versión DEBUG de OpenCore,\ny habilita adicional kernel logging.",
-    "use_debug":"Usa la versión DEBUG de la kext, y habilita adicional kernel logging.",
-    "Outputverboseinformationupon_startup":"Muestra información detallada en el arranque",
+    "Use_the_DEBUG_version":"Usa la versión DEBUG de OpenCore\ny habilita adicional kernel logging.",
+    "use_debug":"Usa la versión DEBUG de la extensión y habilita adicional kernel logging.",
+    "Outputverboseinformationupon_startup":"Muestra más información en el arranque.",
     "Target_model":"Modelo final",
     "Host_model":"Modelo anfitrión",
-    "Applicable_only_to_BCM943224,_331,":"Aplicable solamente a BCM943224, 331,",
-    "360and3602chipsets.":"chipsets 360 y 3602.",
-    "Disable_Thunder":"Desactiva Thunder",
+    "Applicable_only_to_BCM943224,_331,":"Aplicable solamente a BCM943224, 331",
+    "360and3602chipsets.":" y chipsets 360 y 3602.",
+    "Disable_Thunder":"Desactiva Thunderbolt",
     "Disable_CPUFriend":"Desactiva CPUFriend",
     "Photos,this_may_delay.":"Fotos, puede tardar.",
-    "CPU_usage":"Uso de CPU",
-    "SATA_power_management":"Gestión de Energía de SATA",
-    "NVMepowermanagement":"Gestión de Energía de NVME",
+    "CPU_usage":"Aumenta uso de CPU.",
+    "SATA_power_management":"Gestión de Energía de SATA.",
+    "NVMepowermanagement":"Gestión de Energía de NVME.",
     "Third-partySATApowermanagement":"Gestión de Energía de 3P SATA",
-    "RegardingiCloudusing3802-BasedGPUs":"Respecto a iCloud usando GPU basadas en 3802",
-    "Disablethemediaanalysisdservice":"Desactiva el servicio mediaanalysisd",
-    "DisableCPUFriendforunsupportedmodels.":"Desactiva CPUFriend para modelos no soportados.",
-    "Regarding_the_malfunction":"Respecto a mal funcionamiento",
-    "Allow_exposing_iGPU_in_Windows":"Permite exponer la iGPU en Windows",
-    "UsedfordGPU-basedMacBooks":"Usado para MacBook basados en dGPU",
-    "DisabledondowngradedNVRAMsystem.":"Desactivar en sistemas con NVRAM degradada.",
-    "PCHmayoccasionallycrashonMacBookPro11,x.":"PCH puede fallar ocasionalmente en\nMacBook Pro 11,x.",
-    "Causes_performance_degradation":"Provoca degradación del rendimiento",
-    "Allow_the_use_of_AppleALC_audio":"Permite el uso de AppleALC audio",
+    "RegardingiCloudusing3802-BasedGPUs":"iCloud falla con GPU basadas en 3802.",
+    "Disablethemediaanalysisdservice":"Desactiva mediaanalysisd",
+    "DisableCPUFriendforunsupportedmodels.":"En modelos no soportados.",
+    "Regarding_the_malfunction":"Puede ocasionar fallos.",
+    "Allow_exposing_iGPU_in_Windows":"Permite exponer la iGPU en Windows.",
+    "UsedfordGPU-basedMacBooks":"Para MacBook basados en dGPU.",
+    "DisabledondowngradedNVRAMsystem.":"Desactivar con NVRAM degradada.",
+    "PCHmayoccasionallycrashonMacBookPro11,x.":"PCH puede fallar ocasionalmente \nen MacBookPro11,x.",
+    "Causes_performance_degradation":"Provoca degradación del rendimiento.",
+    "Allow_the_use_of_AppleALC_audio":"Permite el uso de AppleALC",
     "WritetoNVRAM":"Escribir en NVRAM",
-    "Trim_related":"Relacionado con Trim",
-    "DownloadthemacOSinstaller(.app)":"Descargar macOS installer (.app)",
-    "Selectthelocalinstaller(.app)":"Elegir el instalador local (.app)",
-    "Downloadthethree-partitionimage(.dmg)":"Descargar la imagen con 3 particiones (.dmg)",
-    "BurnDMGimage(.dmg)":"Grabar imagen DMG (.dmg)",
-    "SSDsmayalsobenefitfromdisablingthisfeature.":"SSDs también pueden beneficiarse de esta \ncaracterística.",
-    "Itisrecommendedthatallusersuseit,evenifthereareissues.":"Recomendable para todos los usuarios, incluso si\nhay problemas.",
+    "Trim_related":"Trim",
+    "DownloadthemacOSinstaller(.app)":"Descargar instalador (.app)",
+    "Selectthelocalinstaller(.app)":"Elegir instalador local (.app)",
+    "Downloadthethree-partitionimage(.dmg)":"Descargar imagen (.dmg)",
+    "BurnDMGimage(.dmg)":"Grabar DMG (.dmg)",
+    "SSDsmayalsobenefitfromdisablingthisfeature.":"Discos SSD también pueden beneficiarse \nde esta característica.",
+    "Itisrecommendedthatallusersuseit,evenifthereareissues.":"Recomendable para todos los usuarios, \nincluso si hay problemas.",
     "Third-partyNVMepowermanagement":"Gestión de Energía de 3P NVMe",
-    "EnableunprovidedfeaturesinmacOS":"Habilita características no nativas en macOS",
+    "EnableunprovidedfeaturesinmacOS":"Prestaciones no nativas en macOS.",
     "AllowOpenCoretowritetoNVRAM.":"Permite a OpenCore escribir en NVRAM.",
-    "Incaseoramalfunctionor":"En caso de mal funcionamiento o",
+    "Incaseoramalfunctionor":"En caso de mal funcionamiento.",
     "CreateamacOSinstaller":"Crear instalador de macOS",
     "FindalocalmacOSinstaller":"Buscar instalador de macOS local",
     "SelectSimpleHacDMGimage" :"Elegir imagen SimpleHac DMG",
@@ -148,8 +147,8 @@
     "Version":"Versión",
     "kdk_download":"Descarga KDK",
     "Retrieving_KDK_information...":"Obteniendo información del KDK...",
-    "remove_the_installer_patch":"Quitar parches instalados",
-    "Start_installing_the_driver_patch":"Iniciar la instalación del parche del controlador",
+    "remove_the_installer_patch":"Quitar instalados",
+    "Start_installing_the_driver_patch":"Iniciar la instalación",
     "last_patch_installation_time":"Tiempo de instalación del último parche:",
     "Installable_patches":"Parches instalables",
     "Settings":"Ajustes",
@@ -163,9 +162,9 @@
     "you_can_go_to_other_things":"Puedes hacer otras cosas, como inspeccionar la comunidad de recursos de SimpleHac, y se te avisará cuando termine.",
     "Failed_to_obtain_DMG_information,please_contact_laobamac.":"Fallo al obtener información de la imagen DMG, por favor contacta con laobamac.",
     "Unable_to_find_the_download_link.":"Incapaz de encontrar el enlace de descarga.",
-    "AllowAppleALCtomanageaudioifapplicable.":"Permite que AppleALC maneje el sonido si corresponde.",
-    "DisabledonlywhenthehostlackstheGOPROM.":"Desactivar solamente cuando el anfitrión carece de \nGOP ROM.",
+    "AllowAppleALCtomanageaudioifapplicable.":"Permite que AppleALC maneje el sonido.",
+    "DisabledonlywhenthehostlackstheGOPROM.":"Desactivar sólo si el anfitrión \ncarece de GOP ROM.",
     "Themodelthatthepatcherisgoingtoimitate.":"Modelo que se va a imitar.",
-    "Disabled_by_default":"Desactivado por defecto, ya que puede suceder desde el\nestado de reposo en algunos sistemas.",
-    "enable_fireware_driver":"Habilitar Controlador FireWirer"
+    "Disabled_by_default":"Desactivado por defecto, puede activarse\nal salir del reposo en algunos sistemas.",
+    "enable_fireware_driver":"Habilitar Controlador FireWire."
 }
