--- a/oclp_mod/languages/es_ES.json
+++ b/oclp_mod/languages/es_ES.json
@@ -20,7 +20,7 @@
     "help": "Obtener ayuda",
     "help_description": [
         "Recursos relacionados con OCLP",
-        "Traducido por Satria Ramadan"
+        "Traducido por Perez987"
     ],
     "download_kdk": "Descargar KDK",
     "change_language": "🇪🇸 Cambiar idioma",
@@ -316,10 +316,10 @@
     "Guide": "Guía",
     "System": "Sistema",
     "Qgroup:965625664": "Grupo Q: 965625664",
-    "simplehac_laobamac": "SimpleHac[laobamac] modificado y traducido al inglés, chino e indonesio por Satria.",
+    "simplehac_laobamac": "SimpleHac[laobamac] modificado y traducido al inglés,\nchino e indonesio por Satria.",
     "SimpleHac_Resource_Community:www.simplehac.cn": "Comunidad de recursos SimpleHac: www.simplehac.cn",
     "About": "Acerca de",
-    "This_is_an_OCLP_mod_for_a_high_school_student_who_likes_to_coo.": "Este es un mod OCLP para un estudiante de secundaria que le gusta coo.",
+    "This_is_an_OCLP_mod_for_a_high_school_student_who_likes_to_coo.": "Este es un mod OCLP para un estudiante de secundaria\nque le gusta coo.",
     "OCLP-Mod_By_laobamac_translated_by_satria_ramadan": "OCLP‑Mod por laobamac traducido por satria ramadan",
     "Date": "Fecha",
     "Versions": "Versiones",
