--- a/oclp_mod/languages/es_ES.json
+++ b/oclp_mod/languages/es_ES.json
@@ -7,8 +7,8 @@
     ],
     "create_installer": "Crear instalador de macOS",
     "installer_description": [
-        "Descargar el instalador de macOS",
-        "Instalar la nueva versión de macOS usando ."
+        "Descargar y grabar el instalador de",
+        "macOS para tu sistema."
     ],
     "settings": "⚙️ Ajustes",
     "post_install": "Instalar parches de hardware",
