--- a/oclp_mod/languages/it_IT.json
+++ b/oclp_mod/languages/it_IT.json
@@ -27,33 +27,33 @@
     "download_ml": "Scarica MetalLib",
     "model_text": "Modello: {model}, modificato da laobamac",
     "unsupported_config": "Vediamo che che stai bootando OpenCore per: {model}\n\nRealizziamo configurazioni adatte alle singole unità e non possono essere utilizzate con Mac diversi.\n\nCompila ed installa una nuova configurazione di OpenCore e riavvia il tuo Mac.",
-    "language_change_title": "Change Language",
-    "language_change_prompt": "Select Language",
-    "language_change_success": "Language has been changed. Restart the application to see full changes.",
-    "update_title": "OCLP-Mod Update Available!",
-    "update_message": "OCLP-Mod {new_version} is available\nYou are currently running {current_version}\nWould you like to update now?",
-    "update_view_github": "View on GitHub",
-    "update_download": "Download and install",
-    "update_ignore": "Ignore",
-    "update_changelog_fail": "## Failed to get changelog\n\nPlease check GitHub RELEASE page",
-    "target_model": "Target Model",
-    "model_description": "Override the model the Patcher will emulate",
-    "back": "Back",
-    "membuat":"Created",
-    "host_model": "Host Model",
+    "language_change_title": "Cambia Lingua",
+    "language_change_prompt": "Scegli Lingua",
+    "language_change_success": "La lingua è stata cambiata. Riavvia l'applicazione.",
+    "update_title": "Aggiornamento per OCLP-Mod disponibile!",
+    "update_message": "OCLP-Mod {new_version} è disponibile\nTu stai eseguendo {current_version}\nVuoi aggiornalo adesso?",
+    "update_view_github": "Vedi su GitHub",
+    "update_download": "Scarica e installa",
+    "update_ignore": "Ignora",
+    "update_changelog_fail": "## Impossibile ottenere le modifiche\n\nControlla i release di GitHub",
+    "target_model": "Modello Destinazione",
+    "model_description": "Sostituisci il modello che il Patcher emulerà",
+    "back": "Indietro",
+    "membuat":"Creato",
+    "host_model": "Modello Host",
     "sip_title": "System Integrity Protection (SIP)",
-    "sip_label": "Flip individual bits corresponding to",
-    "serial_title": "Serial Number Override",
-    "custom_serial": "Custom Serial Number",
-    "custom_board_serial": "Custom Board Serial Number",
-    "generate_serial": "Generate S/N:",
-    "Booting_firmware":"Booting Firmware",
-    "ringkasan":"Summary",
-    "start_macos":"Start macOS",
-    "start_XHCI":"Starting XHCI",
-    "usb_expansion":"USB 3.0 expansion card to boot macOS.",
-    "booting_nvme":"Booting NVWME",
-    "support":"Support",
+    "sip_label": "Capovolgere i singoli bit corrispondenti a",
+    "serial_title": "Sostituisci Numero Seriale",
+    "custom_serial": "Numero Seriale Personalizzato",
+    "custom_board_serial": "Numero di Scheda Personalizzato",
+    "generate_serial": "Genera S/N:",
+    "Booting_firmware":"Sto facendo il boot del Firmware",
+    "ringkasan":"Sommario",
+    "start_macos":"Avvia macOS",
+    "start_XHCI":"Avvio XHCI",
+    "usb_expansion":"scheda di espansione USB 3.0 per bootare macOS.",
+    "booting_nvme":"Sto facendo boot nell'NVWME",
+    "support":"Supporto",
     "Boot_interface_wait_time":"Boot interface wait time",
     "when_deactive":"When deactivated, users can hold the ESC\nkey Display selector in the firmware.",
     "Displaying_the_OpenCore_boot_interface":"Displaying the OC boot interface",
